fix: change low contrast font color

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ p {
   padding: 1rem 0.5rem;
   background-color: #1e1f23;
   color: white;
+  max-width: min-content;
 }
 
 .options {
@@ -105,6 +106,10 @@ p {
   max-width: 253px;
   width: 100%;
   padding: 0.2rem 2px;
+}
+
+.tree-name {
+  color: whitesmoke;
 }
 
 div:has(> .save) {
